# Bibliotalk

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  BLUEPRINT-discord.md  CODEBASE.txt  DESIGN.md  OPERATIONS.md  README.md  ROSTER.md  blueprint.md  new_proj_map.md  pyproject.toml
.github/workflows/: ci.yml  deploy-cloud-run.yml
.specify/memory/: constitution.md
deploy/gcp/: README.md
deploy/local/: .env.example  .gitignore  docker-compose.yml  ghosts.yaml
docs/: NOTES.md
docs/knowledge/: element-call-sdk.md  gemini-live-api.md  gemini-live-tools.md  google-adk.md  (+1 more)
scripts/: backfill_bt_store_v2.py  matrix-dev.sh  outline-codebase.sh
services/discord_service/: pyproject.toml
services/discord_service/scripts/: seed_agent.py
services/discord_service/src/: __init__.py  __main__.py  config.py  runtime.py
services/discord_service/src/bot/: __init__.py  client.py  concierge.py  dm_handler.py  message_models.py  voice_gateway_proxy.py  voice_transcripts.py
services/discord_service/src/feed/: __init__.py  batcher.py  discord_transport.py  publisher.py
services/discord_service/src/ops/: __init__.py  agent.py  feed.py
services/discord_service/src/talks/: agent_directory.py  router.py  service.py
services/discord_service/tests/contract/: test_discord_message_models.py
services/discord_service/tests/integration/: test_dm_chat.py  test_feed_publication.py  test_quickstart_flow.py  test_runtime_startup.py  test_talk_chat.py  test_voice_transcripts.py
services/discord_service/tests/unit/: test_batcher.py  test_feed_publisher.py  test_voice_routes.py
services/memory_page_service/: pyproject.toml
services/memory_page_service/src/: __init__.py  __main__.py  app.py  config.py  resolver.py
services/memory_page_service/tests/contract/: test_memory_pages_contract.py
services/memory_page_service/tests/integration/: test_app_http.py  test_memory_pages.py
services/memory_service/: README.md  pyproject.toml
services/memory_service/scripts/: trigger_ingest.py
services/memory_service/src/: __init__.py  __main__.py  asgi.py  entrypoint.py  ops.py
services/memory_service/src/adapters/: rss_feed.py  youtube_transcript.py
services/memory_service/src/api/: __init__.py  admin_auth.py  admin_console.py  admin_console_models.py  admin_models.py  app.py  config.py  entrypoint.py  html.py  memcell_split.py  memories_service.py  memories_store.py  memory_id.py  models.py
services/memory_service/src/pipeline/: chunking.py  index.py  ingest.py
services/memory_service/src/runtime/: config.py  poller.py  reporting.py
services/memory_service/tests/contract/: test_memory_id_contract.py
services/memory_service/tests/integration/: test_ingest_pipeline.py  test_memories_api.py  test_runtime_startup.py
services/memory_service/tests/unit/: test_chunking.py  test_discovery.py  test_ids.py  test_index.py  test_pipeline.py  test_poller_concurrency.py  test_poller_timezone.py  test_youtube_transcript.py
(+145 files in other folders)
