[project]
name = "bibliotalk"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = [
  "packages/bt_cli",
  "packages/bt_common",
  "packages/bt_store",
  "packages/bt_webui",
  "services/agents_service",
  "services/discord_service",
  "services/memory_service",
]
