[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memory_service"
version = "0.1.0"
description = "Bibliotalk memory service"
requires-python = ">=3.11"
dependencies = [
  "aiosqlite>=0.20.0",
  "bt_common>=0.1.0",
  "bt_store>=0.1.0",
  "feedparser>=6.0.11",
  "fastapi>=0.115.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "PyYAML>=6.0.1",
  "SQLAlchemy>=2.0.36",
  "uvicorn>=0.34.0",
  "youtube-transcript-api>=0.6.2",
  "yt-dlp[default]>=2025.2.19",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.6.9",
]
ingest = []
web = []

[tool.setuptools]
packages = [
  "memory_service",
  "memory_service.adapters",
  "memory_service.api",
  "memory_service.domain",
  "memory_service.pipeline",
  "memory_service.runtime",
]

[tool.setuptools.package-dir]
"memory_service" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.uv.sources]
bt-common = { workspace = true }
bt-store = { workspace = true }
